--- a/src/styles/Report.css
+++ b/src/styles/Report.css
@@ -1,5 +1,4 @@
 .report {
-  margin-top: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
